--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,10 @@ google-generativeai==0.3.2
 pydantic==2.5.0
 python-multipart==0.0.6
 python-dotenv==1.0.0
-langchain-core==0.1.52
-langgraph==0.0.39
+langchain-core==0.2.43
+langgraph==0.2.16
 jinja2==3.1.2
+yfinance==0.2.65
+beautifulsoup4==4.12.2
+lxml==5.4.0
+python-whois==0.9.5
